--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@
 
 /public/assets
 .byebug_history
-
+/app/assets/images
 /config/database.yml
 # Ignore master key for decrypting credentials and more.
 /config/master.key
