--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,39 @@ name_length: 50
 email_length: 250
 password_min_length: 6
 gravatar_size: 80
+app:
+  user:
+    first_name_max_length: 20
+    last_name_max_length: 10
+    name_max_length: 50
+    phone_max_length: 11
+    email_max_length: 80
+    pass_min_length: 6
+    image_size_mb: 5
+    image_accept: "image/jpeg,image/gif,image/png"
+    none_avatar: "none-avatar.jpg"
+    avatar_size: "100x100"
+    yes_remmeber: "1"
+    avatar_size_list: "50x50"
+    yes_remmeber: "1"
+    per_page: 10
+    admin: 1
+    avatar_size_review: "100x100"
+  category:
+    name_max_length: 100
+  page: 10
+  tour:
+    length: 250
+    text_area_size: "20x7"
+    title_max_length: 500
+    min_people: 1
+    value_people: 1
+    min_price: 1
+    value_price: 1
+  tour_sp:
+    length: 100
+  booking:
+    min_number: 1
+    value: 1
+  review:
+    length: 400
