--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
-  status: 1
-  booking_date: 2019-06-12 07:52:49
+  new: MyString
 
 two:
-  user_id: 1
-  status: 1
-  booking_date: 2019-06-12 07:52:49
+  new: MyString
