--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 1
-  reply_id: 1
-  content: MyString
-  type: 
+  new: MyString
 
 two:
-  user_id: 1
-  reply_id: 1
-  content: MyString
-  type: 
+  new: MyString
