--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,15 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 
-  rating: 1
-  tour_id: 1
-  comment_id: 1
-  review_day: 2019-06-12 08:02:45
+  new: MyString
 
 two:
-  user_id: 
-  rating: 1
-  tour_id: 1
-  comment_id: 1
-  review_day: 2019-06-12 08:02:45
+  new: MyString
